<resources>
    <string name="app_name">MyPreferences</string>
    <string name="group">Group</string>
    <string name="save">Save</string>
    <string name="tools">Tools</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="navig_open">opening the navigation drawer</string>
    <string name="navig_cloese">closing the navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>