<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camera"
            android:title="@string/camera"
            android:icon="@drawable/ic_action_camera"/>

        <item android:id="@+id/nav_gallery"
            android:title="@string/gallery"
            android:icon="@drawable/ic_action_gallery"/>
    </group>

    <group>
        <item android:id="@+id/nav_tools"
            android:title="@string/tools"
            android:icon="@drawable/ic_action_tools"/>
    </group>

    <group>
        <item android:title="@string/group">
            <menu>
                <item android:id="@+id/nav_send"
                    android:title="@string/send"
                    android:icon="@drawable/ic_action_send"/>
                <item android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_action_share"/>
            </menu>
        </item>
    </group>
</menu>